[workspace]
resolver = "2"
members = ["crates/crontimes-core", "crates/crontimes-worker"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-crontimes"

[workspace.dependencies]
# VGI Rust SDK (worker side), from crates.io. Pulls in vgi-rpc and arrow 58
# transitively; keep arrow/vgi-rpc versions in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0.5.0"
vgi-rpc = { version = "0.2", default-features = false, features = ["macros", "http"] }
arrow-array = "58"
arrow-schema = "59"

# Cron projection: croner parses 5/6/7-field expressions and computes occurrences
# over chrono datetimes.
croner = "3.0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10"

crontimes-core = { path = "crates/crontimes-core" }

[profile.release]
opt-level = 2
