[package]
name = "crontimes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure cron-expansion logic (croner + chrono) for the crontimes VGI worker"

[dependencies]
croner.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
