[package]
name = "crontimes-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker exposing cron_fire_times() — projects when a cron expression will fire, as a table"

[[bin]]
name = "crontimes-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
croner.workspace = true
crontimes-core.workspace = true
log = "0.4"
env_logger = "0.11"
